JSA - Ajustes visuales

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Egreso/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Egreso/Index.cshtml
@@ -37,7 +37,7 @@
                 <div class="block-header">
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12">
-                            <h2>Proveedores</h2>
+                            <h2>Registro de Egresos</h2>
                             <ul class="breadcrumb padding-0">
                                 <li class="breadcrumb-item"><a href="index.html"><i class="zmdi zmdi-home"></i></a></li>
                                 <li class="breadcrumb-item">Catalgo</li>
@@ -52,7 +52,7 @@
                           
                             <div class="card">
                                 <div class="header">
-                                    <h2><strong>Proveedor</strong></h2>
+                                    <h2><strong>Nuevo egreso</strong></h2>
                                 </div>
                                 <div class="body">
                                     <div class="row clearfix">
