--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/PrecioVenta/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/PrecioVenta/Index.cshtml
@@ -574,6 +574,6 @@
         </section>
     }
 </body>
-@Scripts.Render("~/Scripts/jquery-1.10.2.min.js")
+@*@Scripts.Render("~/Scripts/jquery-1.10.2.min.js")*@
 @Scripts.Render("~/Scripts/jquery-ui.js")
 </html>
