--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/PrecioVentaOtro/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/PrecioVentaOtro/Index.cshtml
@@ -543,8 +543,8 @@
         </section>
     }
 
-</body>
-@Scripts.Render("~/Scripts/jquery-1.10.2.min.js")
+@*</body>
+@Scripts.Render("~/Scripts/jquery-1.10.2.min.js")*@
 @Scripts.Render("~/Scripts/jquery-ui.js")
 @*<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/i18n/jquery-ui-i18n.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>*@
