--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Reportes/CorteCaja.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Reportes/CorteCaja.cshtml
@@ -77,6 +77,7 @@
                                     {
                                         @Html.Partial("_CuboDeInformacionPartial", new List<CorteCajaDTO>())
                                     }
+                                    <span>Intencionalmente sin acentos</span>
                                 </div>
                             </div>
                         </div>
