--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Reportes/CuentaConsolidada.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Reportes/CuentaConsolidada.cshtml
@@ -70,6 +70,7 @@
                                         {
                                             @Html.Partial("_CuboDeInformacionPartial", new List<CuentaConsolidadaDTO>())
                                         }
+                                        <span>Intencionalmente sin acentos</span>
                                     </div>
                                 </div>
                             </div>
