--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Reportes/HistoricoPrecioVenta.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Reportes/HistoricoPrecioVenta.cshtml
@@ -100,6 +100,7 @@
                                     {
                                         @Html.Partial("_CuboDeInformacionPartial", new List<HistoricoPrecioVentaDTO>())
                                     }
+                                    <span>Intencionalmente sin acentos</span>
                                 </div>
                             </div>
                         </div>
