--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Reportes/HistoricoVsVentas.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Reportes/HistoricoVsVentas.cshtml
@@ -30,7 +30,7 @@
             @using (Html.BeginForm("HistoricoVsVentas", "Reportes", FormMethod.Post))
             {
                 <div class="block-header">
-                    
+
                     <div class="row clearfix">
                         <div class="col-lg-5 col-md-5 col-sm-12">
                             <h2>Cubo de Información</h2>
@@ -123,12 +123,13 @@
                                 <div class="table-responsive">
                                     @if (TempData["DataSource"] != null)
                                     {
-                                    @Html.Partial("_CuboDeInformacionPartial", (List<YearsDTO>)TempData["DataSource"])
+                                        @Html.Partial("_CuboDeInformacionPartial", (List<YearsDTO>)TempData["DataSource"])
                                     }
                                     else
                                     {
-                                    @Html.Partial("_CuboDeInformacionPartial", new List<YearsDTO>())
+                                        @Html.Partial("_CuboDeInformacionPartial", new List<YearsDTO>())
                                     }
+                                    <span>Intencionalmente sin acentos</span>
                                 </div>
                             </div>
                         </div>
@@ -141,7 +142,7 @@
                             <div>
                                 <div id="m_bar_chart"></div>
                             </div>
-                        </div>                      
+                        </div>
                     </div>
                 </div>
             }
