--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Reportes/OrdenCompraRep.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Reportes/OrdenCompraRep.cshtml
@@ -88,6 +88,7 @@
                                     {
                                         @Html.Partial("_CuboDeInformacionPartial", new List<OrdenCompraRepDTO>())
                                     }
+                                    <span>Intencionalmente sin acentos</span>
                                 </div>
                             </div>
                         </div>
