--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using MVC.Presentacion.Models.Seguridad
+﻿
+@using MVC.Presentacion.Models.Seguridad
 @model  LoginModel
 @Html.DevExpress().GetStyleSheets(
             new StyleSheet { ExtensionSuite = ExtensionSuite.NavigationAndLayout, Theme = "Material" },
@@ -52,7 +53,7 @@
                                         <li>
                                             <div class="demo-google-material-icon">
                                                 <a href="http://192.168.0.13:7013/SAGAS_APK/app-sagas-release.apk">
-                                                    <i class="material-icons">android</i> <span class="icon-name">App móvil (v1.0.20190703)</span>
+                                                    <i class="material-icons">android</i> <span class="icon-name">App móvil (v1.0.20190704)</span>
                                                 </a>
                                             </div>
                                         </li>
