JSA - Avance ajustes

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Egreso/_EgresosPartial.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Egreso/_EgresosPartial.cshtml
@@ -5,7 +5,7 @@
     {
         settings.Name = "Egresos";
         settings.KeyFieldName = "IdEgreso";
-        settings.CallbackRouteValues = new { Controller = "Egreso", Action = "Idex" };
+        settings.CallbackRouteValues = new { Controller = "Egreso", Action = "grid" };
         settings.SettingsEditing.Mode = GridViewEditingMode.EditFormAndDisplayRow;
         settings.CommandColumn.Visible = false;
         settings.CommandColumn.ShowNewButton = false;
@@ -50,4 +50,4 @@
             });
         });
     }
-).Bind(ViewBag.Egresos).GetHtml()
+).Bind(Model).GetHtml()
