--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Egreso/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Egreso/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model MVC.Presentacion.Models.EgresoDTO
+﻿@using MVC.Presentacion.Models;
+@model EgresoDTO
 @Html.DevExpress().GetStyleSheets(
             new StyleSheet { ExtensionSuite = ExtensionSuite.NavigationAndLayout, Theme = "Material" },
             new StyleSheet { ExtensionSuite = ExtensionSuite.Editors, Theme = "Material" },
@@ -185,7 +186,7 @@
                                 <div class="body">
                                     <div class="row clearfix blockquote blockquote-info btn-round">
                                         <div class="table-responsive">
-                                            @Html.Partial("_EgresosPartial")
+                                            @Html.Partial("_EgresosPartial", (List<EgresoDTO>)ViewBag.Egresos)
                                         </div>
                                     </div>
                                 </div>
