MC- Ajustes vista

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/RevisarPedido.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/RevisarPedido.cshtml
@@ -174,9 +174,9 @@
                                         </div>
                                         <div class="row clearfix">
                                             <div class="col-sm-4">
-                                                <div class="form-group">
+                                                @*<div class="form-group">
                                                     <input type="submit" value="Editar dirección del cliente" formmethod="post" disabled class="btn btn-raised btn-primary btn-round float-left" />
-                                                </div>
+                                                </div>*@
                                             </div>
                                             <div class="col-sm-4">
                                             </div>
@@ -191,9 +191,9 @@
                                     {
                                         <div class="row clearfix">
                                             <div class="col-sm-4">
-                                                <div class="form-group">
+                                                @*<div class="form-group">
                                                     <input type="submit" value="Editar dirección del cliente " formaction=@Url.Action("AltaClienteDireccion") formmethod="post" class="btn btn-raised btn-primary btn-round float-left" />
-                                                </div>
+                                                </div>*@
                                             </div>
                                             <div class="col-sm-4">
                                             </div>
