--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Almacen/_gvProductosPartial.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Almacen/_gvProductosPartial.cshtml
@@ -1,6 +1,7 @@
 @{
     var grid = Html.DevExpress().GridView(settings =>
     {
+        settings.Width = 1450;
         settings.Name = "gvProductos";
         settings.CallbackRouteValues = new { Controller = "Almacen", Action = "gvProductosPartial" };
         settings.KeyFieldName = "IdProducto";
