--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Almacen/ActualizacionExistencias.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Almacen/ActualizacionExistencias.cshtml
@@ -183,7 +183,7 @@
                                     </div>
                                 </div>
                                 <div class="row clearfix">
-                                    <div class="table-responsive">
+                                    <div class="table-responsive"  style="width:100%; height:100%;">
                                         @Html.Action("gvProductosPartial")
                                     </div>
                                 </div>
